mywork/force-app/main/default/objects/Backlog__c/Backlog__c.object-meta.xml
<CustomObject>
    <description>Represents backlog items which can be features, stories or defects.</description>
    <label>Backlog Item</label>
    <nameField>
        <displayFormat>Item-{00000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>