mywork/force-app/main/default/objects/Backlog__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the progress of item is blocked.  Not a status or state since we don't want to lose the original value to set it to blocked.</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>