mywork/force-app/main/default/objects/Backlog__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <inlineHelpText>This is used to measure the business value.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>