mywork/force-app/main/default/objects/Backlog__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Defect Closed on Date/Time</description>
    <inlineHelpText>Date/Time defect's status was set to Closed</inlineHelpText>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>