mywork/force-app/main/default/objects/Backlog__c/fields/Current_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Current_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>