mywork/force-app/main/default/objects/Backlog__c/fields/Custom_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Custom_Backlog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a different backlog, all items are already assigned to the main backlog</errorMessage>
        <filterItems>
            <field>Custom_Backlog__c.Universal__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Custom_Backlog__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>