mywork/force-app/main/default/objects/Backlog__c/fields/Custom_Priority__c.field-meta.xml
<CustomField>
    <fullName>Custom_Priority__c</fullName>
    <label>Backlog Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>