mywork/force-app/main/default/objects/Backlog__c/fields/Dev_Effort__c.field-meta.xml
<CustomField>
    <fullName>Dev_Effort__c</fullName>
    <inlineHelpText>This is used to measure the development effort required to implement a story.  Represents a mix of technical complexity, work time, and even uncertainty bound to a story.  1 point represents a basic configuration change like creating a new field.</inlineHelpText>
    <label>Dev Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>