mywork/force-app/main/default/objects/Backlog__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an epic story?</inlineHelpText>
    <label>Epic</label>
    <type>Checkbox</type>
</CustomField>