mywork/force-app/main/default/objects/Backlog__c/fields/Found_in__c.field-meta.xml
<CustomField>
    <fullName>Found_in__c</fullName>
    <description>Capture Found in Source Instance for a defect</description>
    <inlineHelpText>Enter source defect was found in</inlineHelpText>
    <label>Found in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>