mywork/force-app/main/default/objects/Backlog__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Backlog Items</relationshipLabel>
    <relationshipName>Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>