mywork/force-app/main/default/objects/Backlog__c/fields/Parent_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Parent_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent user story this story is related to.</inlineHelpText>
    <label>Parent User Story</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Related User Stories</relationshipLabel>
    <relationshipName>Backlogs</relationshipName>
    <type>Lookup</type>
</CustomField>