mywork/force-app/main/default/objects/Backlog__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate the persona, which gives the user's perspective.  Who is it that wants/needs this story to be implemented</description>
    <inlineHelpText>Indicate the persona, which gives the user's perspective.  Who is it that wants/needs this story to be implemented</inlineHelpText>
    <label>As a(n)</label>
    <referenceTo>Persona__c</referenceTo>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>