mywork/force-app/main/default/objects/Backlog__c/fields/QA_Effort__c.field-meta.xml
<CustomField>
    <fullName>QA_Effort__c</fullName>
    <inlineHelpText>This is used to measure the QA effort needed to test the solution to implement the user story or to resolve the defect.</inlineHelpText>
    <label>QA Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>