mywork/force-app/main/default/objects/Backlog__c/fields/Release_Priority__c.field-meta.xml
<CustomField>
    <fullName>Release_Priority__c</fullName>
    <label>Release Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>