mywork/force-app/main/default/objects/Backlog__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Defect Resolved on Date/Time</description>
    <inlineHelpText>Value in this field will be set when Status is changed to Resolved</inlineHelpText>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>