mywork/force-app/main/default/objects/Backlog__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity of the Defect</description>
    <inlineHelpText>Blocker – blocks further testing
Critical – affects critical functionality/data. No workaround.
High – affects major functionality/data
Medium – affects minor functionality/data
Low – doesn't affect functionality/data</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>