mywork/force-app/main/default/objects/Backlog__c/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <inlineHelpText>Tell why the need is important to the user.  Should represent some business value (save time, save money, easier to use, less clicks, et al).  Basically, justify the need.</inlineHelpText>
    <label>So that</label>
    <type>TextArea</type>
</CustomField>