mywork/force-app/main/default/objects/Backlog__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Design consideration and solution notes.</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>