mywork/force-app/main/default/objects/Backlog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The status should indicate the stage in the life of a backlog item from inception to completion.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Needs Requirements</fullName>
            </value>
            <value>
                <fullName>Needs Solution</fullName>
            </value>
            <value>
                <fullName>Dev Ready</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Dev Complete</fullName>
            </value>
            <value>
                <fullName>Build Ready</fullName>
            </value>
            <value>
                <fullName>QA Ready</fullName>
            </value>
            <value>
                <fullName>QA Accepted</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Defect Resolution</fullName>
            </value>
            <value>
                <fullName>UAT Accepted</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>