mywork/force-app/main/default/objects/Backlog__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Short summary of the backlog item</description>
    <inlineHelpText>Enter a short summary of the backlog item</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>