mywork/force-app/main/default/objects/Backlog__c/fields/User_Goal__c.field-meta.xml
<CustomField>
    <fullName>User_Goal__c</fullName>
    <description>This tells what the user wants to do.  What is their goal?  This is not for capturing WHY - that is in another field</description>
    <inlineHelpText>This tells what the user wants to do.  What is their goal?  This is not for capturing WHY - that is in another field</inlineHelpText>
    <label>I need</label>
    <type>TextArea</type>
</CustomField>