mywork/force-app/main/default/objects/Backlog__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user story that the defect is associated to.</inlineHelpText>
    <label>User Story</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Backlog</relationshipName>
    <type>Lookup</type>
</CustomField>