mywork/force-app/main/default/objects/Backlog__c/recordTypes/Defect.recordType-meta.xml
<RecordType>
    <fullName>Defect</fullName>
    <active>true</active>
    <description>A bug or an issue related to an implemented story.</description>
    <label>Defect</label>
</RecordType>