mywork/force-app/main/default/objects/Backlog__c/validationRules/Main_Backlog_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Backlog_Assignment</fullName>
    <active>true</active>
    <description>Restricts the user from assigning items to the main backlog</description>
    <errorConditionFormula>Custom_Backlog__r.Universal__c = true</errorConditionFormula>
    <errorMessage>Please select a different backlog, all items are already assigned to the main backlog</errorMessage>
</ValidationRule>