mywork/force-app/main/default/objects/Backlog__c/listViews/High_Priority.listView-meta.xml
<ListView>
    <fullName>High_Priority</fullName>
    <columns>NAME</columns>
    <columns>Business_Value__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>High Priority</label>
</ListView>