mywork/force-app/main/default/objects/Backlog__c/listViews/New_Entries.listView-meta.xml
<ListView>
    <fullName>New_Entries</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Entries</label>
</ListView>