mywork/force-app/main/default/objects/Backlog__c/listViews/New_Items.listView-meta.xml
<ListView>
    <fullName>New_Items</fullName>
    <columns>NAME</columns>
    <columns>Epic__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Items</label>
</ListView>