mywork/force-app/main/default/objects/Backlog__c/listViews/Stories.listView-meta.xml
<ListView>
    <fullName>Stories</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Business_Value__c</columns>
    <columns>User_Goal__c</columns>
    <columns>So_that__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Backlog__c.Story</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Needs Requirements,Requirements Defined,Needs Solution,Sprint Ready</value>
    </filters>
    <filters>
        <field>Epic__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Stories</label>
</ListView>