mywork/force-app/main/default/objects/Backlog__c/listViews/Untyped.listView-meta.xml
<ListView>
    <fullName>Untyped</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Untyped</label>
</ListView>